@@ -30,6 +30,7 @@ import com.google.android.material.floatingactionbutton.FloatingActionButton;
 import com.google.android.material.snackbar.Snackbar;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import retrofit2.Call;
 import retrofit2.Callback;
@@ -50,6 +51,8 @@ public class AdvertisementsActivity extends AppCompatActivity {
 
     private FloatingActionButton addAdvertisementButton;
 
+    private FloatingActionButton addCategoryButton;
+
     @Override
     protected void onCreate(Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
@@ -64,6 +67,8 @@ public class AdvertisementsActivity extends AppCompatActivity {
         if(savedInstanceState == null &&
                 findViewById(R.id.fragmentCategories) != null) {
             recyclerViewCategories = findViewById(R.id.recyclerViewCategories);
+            addCategoryButton = findViewById(R.id.addCategoryButton);
+            addCategoryButton.setVisibility(RoleUtil.isAdministrator(AppConfiguration.user()) ? View.VISIBLE : View.INVISIBLE);
 
             // recyclerView выводит элементы в вертикальном списке
             LinearLayoutManager layoutManager = new LinearLayoutManager(this);
@@ -132,7 +137,7 @@ public class AdvertisementsActivity extends AppCompatActivity {
                             // создание адаптера recyclerView и слушателя щелчков на элементах
                             List<AdvertisementDto> advertisements = response.body().getAdvertisements();
                             if(!RoleUtil.isModerator(AppConfiguration.user())) {
-                                advertisements = advertisements.stream().filter(advertisementDto -> advertisementDto.getStatus() != AdvertisementStatus.REJECTED).toList();
+                                advertisements = advertisements.stream().filter(advertisementDto -> advertisementDto.getStatus() != AdvertisementStatus.REJECTED).collect(Collectors.toList());
                             }
                             advertisementsAdapter = new AdvertisementsAdapter(
                                     advertisement -> {
